# session-weaver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: TEST_REPORT.zh-CN.md
scripts/: compat-smoke.sh
src/: cli.rs  lib.rs  main.rs  portable.rs
src/catalog/: mod.rs
src/connectors/: mod.rs
src/connectors/claude/: desktop.rs  mod.rs
src/connectors/codex/: mod.rs
src/core/: diagnostic.rs  equivalence.rs  mod.rs  model.rs  validate.rs
src/pipeline/: mod.rs
tests/: cli.rs  connectors.rs  core_validation.rs  malformed.rs  model.rs  pipeline.rs  roundtrip.rs  storage.rs
